test/types/range/deitz/test_range_iterate_error.good
test_range_iterate_error.chpl:1: error: halt reached - iteration over range that has no first index
