test/types/range/deitz/test_range_iterate_error.chpl
for i in zip(..4,5..8) do
  writeln(i);
